refactor: remove early informal OAuth code (#53)
