# src/bkauth/docs/swagger.yaml
@@ -64,60 +64,6 @@ definitions:
     - bk_tenant
     - name
     type: object
-  handler.createdTargetSerializer:
-    properties:
-      clients:
-        example: bk_ci,bk_ci1,bk_ci2
-        type: string
-      description:
-        example: Platform as A Service
-        type: string
-      id:
-        example: bk_ci
-        maxLength: 16
-        minLength: 3
-        type: string
-      name:
-        example: BK PaaS
-        maxLength: 32
-        type: string
-    required:
-    - clients
-    - id
-    - name
-    type: object
-  handler.deleteViaID:
-    properties:
-      id:
-        example: read
-        type: string
-    required:
-    - id
-    type: object
-  handler.scopeSerializer:
-    properties:
-      description:
-        example: Read
-        type: string
-      id:
-        example: read
-        maxLength: 16
-        minLength: 3
-        type: string
-      name:
-        example: Read
-        maxLength: 32
-        type: string
-    required:
-    - id
-    - name
-    type: object
-  handler.targetCreateResponse:
-    properties:
-      id:
-        example: bk_ci
-        type: string
-    type: object
   handler.tenantSerializer:
     properties:
       id:
@@ -132,41 +78,6 @@ definitions:
         type: string
     required:
     - mode
-    type: object
-  handler.updateOAuthAppSerializer:
-    properties:
-      redirect_urls:
-        example:
-        - '[https://example.com/'
-        - ' http://example.com]'
-        items:
-          type: string
-        type: array
-    required:
-    - redirect_urls
-    type: object
-  handler.updateScopeSerializer:
-    properties:
-      description:
-        example: Read
-        type: string
-      name:
-        example: Read
-        maxLength: 32
-        type: string
-    type: object
-  handler.updatedTargetSerializer:
-    properties:
-      clients:
-        example: bk_ci,bk_ci1,bk_ci2
-        type: string
-      description:
-        example: Platform as A Service
-        type: string
-      name:
-        example: BK PaaS
-        maxLength: 32
-        type: string
     type: object
   types.AccessKey:
     properties:
@@ -191,24 +102,6 @@ definitions:
         type: boolean
       id:
         type: integer
-    type: object
-  types.OAuthApp:
-    properties:
-      bk_app_code:
-        type: string
-      redirect_urls:
-        items:
-          type: string
-        type: array
-    type: object
-  types.Scope:
-    properties:
-      description:
-        type: string
-      id:
-        type: string
-      name:
-        type: string
     type: object
   util.Response:
     properties:
@@ -609,380 +502,6 @@ paths:
       summary: app secret verify
       tags:
       - app
-  /api/v1/oauth/apps:
-    post:
-      consumes:
-      - application/json
-      description: creates an oauth app with base info
-      operationId: api-oauth-app-create
-      parameters:
-      - description: app_code
-        in: header
-        name: X-BK-APP-CODE
-        required: true
-        type: string
-      - description: app_secret
-        in: header
-        name: X-BK-APP-SECRET
-        required: true
-        type: string
-      - description: App Info
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/handler.createAppSerializer'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          headers:
-            X-Request-Id:
-              description: the request id
-              type: string
-          schema:
-            allOf:
-            - $ref: '#/definitions/util.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/common.AppResponse'
-              type: object
-      summary: oauth app create
-      tags:
-      - oauth app
-  /api/v1/oauth/apps/{bk_app_code}:
-    get:
-      consumes:
-      - application/json
-      description: gets an oauth app with base info
-      operationId: api-oauth-app-get
-      parameters:
-      - description: app_code
-        in: header
-        name: X-BK-APP-CODE
-        required: true
-        type: string
-      - description: app_secret
-        in: header
-        name: X-BK-APP-SECRET
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          headers:
-            X-Request-Id:
-              description: the request id
-              type: string
-          schema:
-            allOf:
-            - $ref: '#/definitions/util.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/types.OAuthApp'
-              type: object
-      summary: oauth app get
-      tags:
-      - oauth app
-    put:
-      consumes:
-      - application/json
-      description: updates an oauth app with base info
-      operationId: api-oauth-app-update
-      parameters:
-      - description: app_code
-        in: header
-        name: X-BK-APP-CODE
-        required: true
-        type: string
-      - description: app_secret
-        in: header
-        name: X-BK-APP-SECRET
-        required: true
-        type: string
-      - description: App Info
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/handler.updateOAuthAppSerializer'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          headers:
-            X-Request-Id:
-              description: the request id
-              type: string
-          schema:
-            $ref: '#/definitions/util.Response'
-      summary: oauth app update
-      tags:
-      - oauth app
-  /api/v1/oauth/targets:
-    post:
-      consumes:
-      - application/json
-      description: creates a target with base info
-      operationId: api-target-create
-      parameters:
-      - description: app_code
-        in: header
-        name: X-BK-APP-CODE
-        required: true
-        type: string
-      - description: app_secret
-        in: header
-        name: X-BK-APP-SECRET
-        required: true
-        type: string
-      - description: Target Info
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/handler.createdTargetSerializer'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          headers:
-            X-Request-Id:
-              description: the request id
-              type: string
-          schema:
-            allOf:
-            - $ref: '#/definitions/util.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/handler.targetCreateResponse'
-              type: object
-      summary: target create
-      tags:
-      - target
-  /api/v1/oauth/targets/{target_id}:
-    put:
-      consumes:
-      - application/json
-      description: updates a target with base info
-      operationId: api-target-update
-      parameters:
-      - description: app_code
-        in: header
-        name: X-BK-APP-CODE
-        required: true
-        type: string
-      - description: app_secret
-        in: header
-        name: X-BK-APP-SECRET
-        required: true
-        type: string
-      - description: Target Info
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/handler.updatedTargetSerializer'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          headers:
-            X-Request-Id:
-              description: the request id
-              type: string
-          schema:
-            $ref: '#/definitions/util.Response'
-      summary: target update
-      tags:
-      - target
-  /api/v1/oauth/targets/{target_id}/scopes:
-    delete:
-      consumes:
-      - application/json
-      description: batch delete scope
-      operationId: api-scope-batch-delete
-      parameters:
-      - description: app_code
-        in: header
-        name: X-BK-APP-CODE
-        required: true
-        type: string
-      - description: app_secret
-        in: header
-        name: X-BK-APP-SECRET
-        required: true
-        type: string
-      - description: Scope ids
-        in: body
-        name: data
-        required: true
-        schema:
-          items:
-            $ref: '#/definitions/handler.deleteViaID'
-          type: array
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          headers:
-            X-Request-Id:
-              description: the request id
-              type: string
-          schema:
-            $ref: '#/definitions/util.Response'
-      summary: scope batch delete
-      tags:
-      - scope
-    get:
-      consumes:
-      - application/json
-      description: list scope
-      operationId: api-scope-list
-      parameters:
-      - description: app_code
-        in: header
-        name: X-BK-APP-CODE
-        required: true
-        type: string
-      - description: app_secret
-        in: header
-        name: X-BK-APP-SECRET
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          headers:
-            X-Request-Id:
-              description: the request id
-              type: string
-          schema:
-            allOf:
-            - $ref: '#/definitions/util.Response'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/types.Scope'
-                  type: array
-              type: object
-      summary: scope list
-      tags:
-      - scope
-    post:
-      consumes:
-      - application/json
-      description: batch create scope
-      operationId: api-scope-batch-create
-      parameters:
-      - description: app_code
-        in: header
-        name: X-BK-APP-CODE
-        required: true
-        type: string
-      - description: app_secret
-        in: header
-        name: X-BK-APP-SECRET
-        required: true
-        type: string
-      - description: Scope Infos
-        in: body
-        name: data
-        required: true
-        schema:
-          items:
-            $ref: '#/definitions/handler.scopeSerializer'
-          type: array
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          headers:
-            X-Request-Id:
-              description: the request id
-              type: string
-          schema:
-            $ref: '#/definitions/util.Response'
-      summary: scope batch create
-      tags:
-      - scope
-  /api/v1/oauth/targets/{target_id}/scopes/{scope_id}:
-    delete:
-      consumes:
-      - application/json
-      description: delete scope
-      operationId: api-scope-delete
-      parameters:
-      - description: app_code
-        in: header
-        name: X-BK-APP-CODE
-        required: true
-        type: string
-      - description: app_secret
-        in: header
-        name: X-BK-APP-SECRET
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          headers:
-            X-Request-Id:
-              description: the request id
-              type: string
-          schema:
-            $ref: '#/definitions/util.Response'
-      summary: scope delete
-      tags:
-      - scope
-    put:
-      consumes:
-      - application/json
-      description: updates a scope
-      operationId: api-scope-update
-      parameters:
-      - description: app_code
-        in: header
-        name: X-BK-APP-CODE
-        required: true
-        type: string
-      - description: app_secret
-        in: header
-        name: X-BK-APP-SECRET
-        required: true
-        type: string
-      - description: scope Info
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/handler.updateScopeSerializer'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          headers:
-            X-Request-Id:
-              description: the request id
-              type: string
-          schema:
-            $ref: '#/definitions/util.Response'
-      summary: scope update
-      tags:
-      - scope
   /healthz:
     get:
       consumes:
